[gd_scene load_steps=5 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://assets/button_0.png" type="Texture" id=3]
[ext_resource path="res://assets/button_1.png" type="Texture" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PanelContainer" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 600.0
margin_bottom = 500.0
script = ExtResource( 1 )

[node name="MoneyButton" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
expand = true

[node name="CoinLabel" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
margin_left = -50.0
margin_top = -25.0
margin_right = 50.0
margin_bottom = 25.0
text = "0 SusCoins"
align = 1
valign = 1

[node name="TimeLabel" type="Label" parent="Control"]
margin_right = 200.0
margin_bottom = 100.0
autowrap = true

[connection signal="pressed" from="Control/MoneyButton" to="Control" method="_on_MoneyButton_pressed"]
